[package]
name = "ajarimochi"
version = "0.1.0"
authors = ["megumish <megumish@exploitouri.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
colored = "1.9"
futures = {version= "0.3", features=["thread-pool"]}